feat: Update color palette to Twitter/X theme
- Updated the Tailwind CSS color palette in index.html to match the Twitter/X design, using an emerald-based theme.
- This changes the background, text, and button colors to align with the new design.

--- a/index.html
+++ b/index.html
@@ -24,22 +24,32 @@
         theme: {
           extend: {
             colors: {
-              'light-bg': '#f8fafc',    // slate-50
-              'dark-bg': '#0f172a',     // slate-900
-              'light-card': '#ffffff',
-              'dark-card': '#1e293b',    // slate-800
-              'light-border': '#e2e8f0', // slate-200
-              'dark-border': '#334155',  // slate-700
-              'light-text': '#1e293b',   // slate-800
-              'dark-text': '#e2e8f0',    // slate-200
-              'light-text-secondary': '#64748b', // slate-500
-              'dark-text-secondary': '#94a3b8',  // slate-400
-              'light-primary': '#4f46e5', // indigo-600
-              'dark-primary': '#818cf8',  // indigo-400
-              'light-primary-hover': '#4338ca', // indigo-700
-              'dark-primary-hover': '#a5b4fc',  // indigo-300
-              'light-primary-soft-bg': '#eef2ff', // indigo-50
-              'dark-primary-soft-bg': '#312e81',  // indigo-900
+              'light-bg': '#FFFFFF',
+              'dark-bg': '#141414',
+              'light-card': '#FFFFFF',
+              'dark-card': '#141414',
+              'light-border': '#E0E0E0',
+              'dark-border': '#333333',
+              'light-text': '#4D4D4D',
+              'dark-text': '#F2F2F2',
+              'light-text-secondary': '#4D4D4D',
+              'dark-text-secondary': '#F2F2F2',
+              'light-primary': '#059669',
+              'dark-primary': '#10B981',
+              'light-primary-hover': '#047857',
+              'dark-primary-hover': '#0D9F6F',
+              'light-primary-soft-bg': '#ECFDF5',
+              'dark-primary-soft-bg': '#064E3B',
+              'light-secondary': '#F7F7F7',
+              'dark-secondary': '#262626',
+              'light-muted': '#F5F5F5',
+              'dark-muted': '#262626',
+              'light-accent': '#10B981',
+              'dark-accent': '#10B981',
+              'light-destructive': '#EA580C',
+              'dark-destructive': '#EF4444',
+              'light-ring': 'rgba(5, 150, 105, 0.3)',
+              'dark-ring': 'rgba(16, 185, 129, 0.3)',
             },
             borderRadius: {
               'ui-medium': '0.75rem', // rounded-xl
