--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gourmet Log</title>
+    <title>ロケレコ</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
     <script>
       // Avoids FOUC (Flash of Unstyled Content) by setting the theme class before React loads.
       (function() {
         try {
           var theme = localStorage.getItem('theme');
-          // Default to dark mode if no theme is set
           if (theme === 'dark' || !theme) {
             document.documentElement.classList.add('dark');
           } else {
@@ -23,6 +25,9 @@
         darkMode: 'class',
         theme: {
           extend: {
+            fontFamily: {
+              sans: ['"Noto Sans JP"', 'sans-serif'],
+            },
             colors: {
               'light-bg': '#FFFFFF',
               'dark-bg': '#141414',
@@ -74,7 +79,6 @@
   <script type="importmap">
 {
   "imports": {
-  
     "react": "https://esm.sh/react@^18.2.0",
     "react/": "https://esm.sh/react@^18.2.0/",
     "react-dom": "https://esm.sh/react-dom@^18.2.0",
@@ -91,7 +95,7 @@
   }
 }
 </script>
-</head>
+  </head>
   <body class="bg-light-bg text-light-text dark:bg-dark-bg dark:text-dark-text transition-colors duration-300">
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
